# Deepracer_Indoor_Navigation_GazeboSimulation

./: README.md
aws-deepracer-controller-simple/simulation_ws/src/deepracer_simulation/launch/: office_cpr_construction_deepracer.launch  office_cpr_deepracer.launch  office_earthquake_deepracer.launch  office_large_deepracer.launch  office_small_deepracer.launch  racecar.launch  racecar_indoorenvironment.launch  racecar_indoorenvironment_nojoystick.launch
aws-deepracer-controller-simple/simulation_ws/src/deepracer_simulation/scripts/: PID_control.py  astar_path.py  circle.py  deepracer_env.py  lqr_tracking_astar.py  marker.py  mpc_obstacles.py  mpc_pathplanning.py  mpc_tracking_astar.py  nav_path.py  pid_controller.py  pid_controller_with_yaw.py  route.csv  route_smooth.csv  straight_line_controller.py  test.py
aws-deepracer-controller-simple/simulation_ws/src/deepracer_simulation/urdf/: racecar.gazebo  racecar.xacro
aws-deepracer-controller-simple/simulation_ws/src/deepracer_simulation/worlds/: empty.world  room.world
deepracer_joy/: CMakeLists.txt  README.md  package.xml
deepracer_joy/config/: logitech_dual_action.yaml  xbox_360.yaml
deepracer_joy/launch/: deepracer_joy.launch
