<?xml version="1.0"?>
<package format="2">
  <name>deepracer_joy</name>
  <version>0.0.0</version>
  <description>
  This package contains the joystick interface for the AWS DeepRacer.
  </description>
  <maintainer email="allison@lyonthackston.com">Allison Thackston</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>ctrl_pkg</exec_depend>
</package>